tests/NormalTests/paczka1/small_fuzzy/51464813.err
Error in line 1: 2ztFSgD S437 76,9
Error in line 7: ZU98G A492 85,4
Error in line 3: XKsH S91 79,4
Error in line 9: wLsAzVEq S91 5,9
